# spotdesirability

./: .gitignore  .nojekyll  .releaserc.json  404.html  CHANGELOG.html  CHANGELOG.md  MANIFEST.in  README.md  REUSE.toml  SECURITY.html  _quarto.yml  about.html  cookbook.html  cookbook.qmd  download.html  download.qmd  examples.html  examples.qmd  index.html  index.qmd  makefile.sh  mkdocs.yml  objects.inv  objects.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
_site/: CHANGELOG.html  SECURITY.html  about.html  cookbook.html  download.html  examples.html  index.html  search.json
_site/docs/: about.html  download.html  examples.html  hyperparameter-tuning-cookbook.html  index.html
_site/reference/: data_utils.html  functions.rsm.activity_pred.html  functions.rsm.conversion_pred.html  functions.rsm.rsm_opt.html  index.html  plot.ccd.plotCCD.html  utils.desirability.DArb.html  utils.desirability.DBox.html  utils.desirability.DCategorical.html  utils.desirability.DMax.html  utils.desirability.DMin.html  utils.desirability.DOverall.html  utils.desirability.DTarget.html  utils.desirability.DesirabilityBase.html
about/: index.html
docs/: about.html  download.html  examples.html  hyperparameter-tuning-cookbook.html  index.html
docs/reference/: data_utils.get_data_folder_path.html  data_utils.get_data_folder_path.qmd  data_utils.html  data_utils.load_compressor_data.html  data_utils.load_compressor_data.qmd  data_utils.qmd  functions.html  functions.qmd  functions.rsm.activity_pred.html  functions.rsm.activity_pred.qmd  functions.rsm.conversion_pred.html  functions.rsm.html  functions.rsm.qmd  functions.rsm.rsm_opt.html  functions.rsm.rsm_opt.qmd  index.html  index.qmd  plot.ccd.html  plot.ccd.plotCCD.html  plot.ccd.plotCCD.qmd  plot.ccd.qmd  plot.html  utils.desirability.DArb.html  utils.desirability.DArb.qmd  utils.desirability.DBox.html  utils.desirability.DBox.qmd  utils.desirability.DCategorical.html  utils.desirability.DCategorical.qmd  utils.desirability.DMax.html  utils.desirability.DMax.qmd  utils.desirability.DMin.html  utils.desirability.DMin.qmd  utils.desirability.DOverall.html  utils.desirability.DOverall.qmd  utils.desirability.DTarget.html  utils.desirability.DTarget.qmd  utils.desirability.DesirabilityBase.html  utils.desirability.DesirabilityBase.qmd  utils.desirability.html  utils.html  (+1 more)
download/: index.html
examples/: index.html
hyperparameter-tuning-cookbook/: index.html
reference/: data_utils.html  data_utils.qmd  functions.html  functions.rsm.activity_pred.html  functions.rsm.activity_pred.qmd  functions.rsm.conversion_pred.html  functions.rsm.conversion_pred.qmd  functions.rsm.html  functions.rsm.rsm_opt.html  functions.rsm.rsm_opt.qmd  index.html  index.qmd  plot.ccd.html  plot.ccd.plotCCD.html  plot.ccd.plotCCD.qmd  plot.html  plot.qmd  utils.desirability.DArb.html  utils.desirability.DArb.qmd  utils.desirability.DBox.html  utils.desirability.DBox.qmd  utils.desirability.DCategorical.html  utils.desirability.DCategorical.qmd  utils.desirability.DMax.html  utils.desirability.DMax.qmd  utils.desirability.DMin.html  utils.desirability.DMin.qmd  utils.desirability.DOverall.html  utils.desirability.DOverall.qmd  utils.desirability.DTarget.html  utils.desirability.DTarget.qmd  utils.desirability.DesirabilityBase.html  utils.desirability.DesirabilityBase.qmd  utils.desirability.html  utils.desirability.qmd  utils.html
reference/SUMMARY/: index.html
reference/spotdesirability/data_utils/: index.html
reference/spotdesirability/functions/rsm/: index.html
reference/spotdesirability/functions/zdt/: index.html
reference/spotdesirability/plot/ccd/: index.html
reference/spotdesirability/utils/desirability/: index.html
reference/spotdesirability/utils/dummy/: index.html
search/: search_index.json
site_libs/bootstrap/: bootstrap-bbe8f129bcebec31329c0192f2c9b372.min.css  bootstrap-dark-020117989dd75b902ffc3662420f40e7.min.css  bootstrap-eb3809c6c13c7455b294a6335bcfbb05.min.css
src/spotdesirability/: __init__.py  data_utils.py
src/spotdesirability/datasets/: df_x_normalized.csv  df_z_normalized.csv
src/spotdesirability/functions/: __init__.py  rsm.py  zdt.py
src/spotdesirability/notebooks/: zdt.ipynb
src/spotdesirability/plot/: __init__.py  ccd.py
src/spotdesirability/utils/: __init__.py  desirability.py  dummy.py
test/: test_desirability.py  test_rsm.py  test_zdt.py
tests/: test_ccd_deep.py  test_conversion_deep.py  test_data_utils.py  test_desirability.py  test_desirability_deep.py  test_rsm.py
