[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "spotdesirability"
version = "0.0.5"
authors = [
  { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
]
description = "spotdesirability - a Python package for desirability"
readme = "README.md"
license = { text="GPL-2.0" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
# PEP 621 dependencies declaration
dependencies = [
  "build",
  "matplotlib",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.33",
  "mkdocstrings-python>=1.10.8",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-section-index>=0.3.9",
  "numpy",
  "nbformat",
  "pandas",
  "python-markdown-math",
  "pytorch-lightning>=1.4",
  "scipy",
  "seaborn",
  "tabulate",
]
# dynamic = ["version"]

[project.urls]
"Homepage" = "https://www.spotseven.de"
Issues = "https://github.com/sequential-parameter-optimization/spotdesirability/issues"
Repository = "https://github.com/sequential-parameter-optimization/spotdesirability"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.black]
line-length = 200
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

