[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "spotdesirability"
version = "0.0.23"
authors = [
  { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
]
description = "spotdesirability - a Python package for desirability"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
# PEP 621 dependencies declaration
dependencies = [
  "build",
  "matplotlib",
  "numpy",
  "nbformat",
  "pandas",
  "pillow>=12.1.1",
  "python-markdown-math",
  "scipy",
  "seaborn",
  "tabulate",
  "typing-extensions>=4.0.0",
  "urllib3>=2.6.3"
]
# dynamic = ["version"]

[project.urls]
"Homepage" = "https://www.spotseven.de"
Issues = "https://github.com/sequential-parameter-optimization/spotdesirability/issues"
Repository = "https://github.com/sequential-parameter-optimization/spotdesirability"

[project.optional-dependencies]
dev = [
    # ── Testing ─────────────────────────────────────────────────────────────
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0,<7.0",
    # ── Documentation (Quarto + quartodoc) ──────────────────────────────────
    "quartodoc>=0.9.1,<1.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    # ── Linting / formatting ─────────────────────────────────────────────────
    "black>=24.1.0,<25.0",
    "isort>=5.13.0,<6.0",
    "ruff>=0.3.0,<1.0",
    # ── Security scanning ────────────────────────────────────────────────────
    "safety>=3.0.0,<4.0",
    "bandit>=1.8.0,<2.0",
]

# uv_build will automatically find packages in src/

[tool.black]
line-length = 200
target-version = ["py313"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    # ── Testing ─────────────────────────────────────────────────────────────
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0,<7.0",
    # ── Documentation (Quarto + quartodoc) ──────────────────────────────────
    # Pin quartodoc to a minor-version range; upgrade deliberately.
    # The Quarto CLI binary itself is pinned in .github/workflows/docs.yml.
    "quartodoc>=0.9.1,<1.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    # ── Linting / formatting ─────────────────────────────────────────────────
    "black>=24.1.0,<25.0",
    "isort>=5.13.0,<6.0",
    "ruff>=0.3.0,<1.0",
    "flake8>=7.3.0",
    # ── Security scanning ────────────────────────────────────────────────────
    "safety>=3.0.0,<4.0",
    "bandit>=1.8.0,<2.0",
]
